# langchain_experiments

./: .env.sample  README.md  pyproject.toml
notebooks/: lesson 3.0 - Chains.ipynb  lesson 4.0 - QnA.ipynb  lesson 5.0 - Evaluation.ipynb  lesson 6.0 - Agents.ipynb  lesson2.1 - Memory.ipynb  lesson2.ipynb
