[tool.poetry]
name = "gh-langchain-experiments"
version = "0.1.0"
description = ""
authors = ["kolommik <mikhail.kolomasov@gmail.com>"]
readme = "README.md"
packages = [{include = "gh_langchain_experiments"}]

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.0"
openai = "^0.27.7"
langchain = "^0.0.189"
tiktoken = "^0.4.0"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
mypy = "^1.3.0"
pylint = "^2.17.4"
flake8 = "^6.0.0"
ipykernel = "^6.23.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
